lib/crop/croptool.cpp
@@ -98,8 +98,11 @@ struct CropToolPrivate {
             top = rect.bottom() + 1 - HANDLE_SIZE;
         } else {
             top = rect.top() + (rect.height() - HANDLE_SIZE) / 2;
-            top = qBound(0, top, viewportSize.height() - HANDLE_SIZE);
-            top = qBound(rect.top() + HANDLE_SIZE, top, rect.bottom() - 2 * HANDLE_SIZE);
+            // Relocate middle crop handle only if there is room for it
+            if (rect.height() >= 3 * HANDLE_SIZE) {
+                top = qBound(0, top, viewportSize.height() - HANDLE_SIZE);
+                top = qBound(rect.top() + HANDLE_SIZE, top, rect.y() + rect.height() - 2 * HANDLE_SIZE);
+            }
         }
 
         if (handle & CH_Left) {
@@ -108,8 +111,11 @@ struct CropToolPrivate {
             left = rect.right() + 1 - HANDLE_SIZE;
         } else {
             left = rect.left() + (rect.width() - HANDLE_SIZE) / 2;
-            left = qBound(0, left, viewportSize.width() - HANDLE_SIZE);
-            left = qBound(rect.left() + HANDLE_SIZE, left, rect.right() - 2 * HANDLE_SIZE);
+            // Relocate middle crop handle only if there is room for it
+            if (rect.width() >= 3 * HANDLE_SIZE) {
+                left = qBound(0, left, viewportSize.width() - HANDLE_SIZE);
+                left = qBound(rect.left() + HANDLE_SIZE, left, rect.x() + rect.width() - 2 * HANDLE_SIZE);
+            }
         }
 
         return QRect(left, top, HANDLE_SIZE, HANDLE_SIZE);
